@@ -56,12 +56,7 @@ correctTypos <- function(E, dat, ...){
 #' @rdname correctTypos
 #' @export
 correctTypos.editset <- function(E, dat,...){
-    v1 <- violatedEdits(E,dat)
-    d1 <- correctTypos.editmatrix(E$num, dat,...)
-    v2 <- violatedEdits(E,dat)
-    k <- apply(!v1 & v2,1,any)
-    if ( any(k) ) d1 <- revert(d1,rows=k)
-    d1
+    correctAndRevert(correctTypos.editmatrix, E, dat, ...)
 }
 
 
