@@ -1,7 +1,6 @@
-library(testthat)
-library(editrules)
+require(editrules)
 
-context("Correctoion of sign errors")
+context("Correction of sign errors")
 
 test_that("correctSigns",{
     expect_identical(
@@ -41,4 +40,139 @@ test_that("correctSigns",{
 }) 
 
 
+test_that("correctRounding.editset works with pure numerical",{
+    
+    v <- correctSigns(
+        editset(expression(
+        x + y == z)),
+        data.frame(
+            x=-1,
+            y=1,
+            z=2
+        )
+    )
 
+    w <- correctSigns(
+        editset(expression(
+        x + y == z))$num,
+        data.frame(
+            x=-1,
+            y=1,
+            z=2
+        )
+    )
+    expect_equal(v$corrected,w$corrected)
+    expect_equal(v$corrections,w$corrections)
+
+})
+
+test_that("correctRounding.editset works with pure numerical",{
+
+    v <- correctTypos(editset(expression(
+        A %in% c('a','b'),
+        B %in% c('c','d'),
+        if ( A == 'a' ) B == 'b')
+        ),
+        data.frame(
+            A = 'a',
+            B = NA
+    ))
+
+    expect_equal(nrow(v$corrections),0)
+})
+
+
+test_that("correctRounding.editset works with unconnected numerical/categorical",{
+
+    v <- correctSigns(
+        editset(expression(
+            x + y == z,
+            x >= 0,
+            A %in% c('a','b'),
+            B %in% c('c','d'),
+            if ( A == 'a' ) B == 'b'
+        )),
+        data.frame(
+            x = -1,
+            y = 1,
+            z = 2,
+            A = 'a',
+            B = NA
+        )
+    )
+    w <- correctSigns(
+        editset(expression(
+            x + y == z,
+            x >= 0,
+            A %in% c('a','b'),
+            B %in% c('c','d'),
+            if ( A == 'a' ) B == 'b'
+        ))$num,
+        data.frame(
+            x = -1,
+            y = 1,
+            z = 2,
+            A = 'a',
+            B = NA
+        )
+    )
+    expect_equal(v$corrected, w$corrected)
+    expect_equal(v$corrections,w$corrections)
+})
+
+
+
+test_that("correctRounding.editset works with connected numerical/categorical",{
+
+
+## without revert
+    E <- editset(expression(
+        x + y == z,
+        x >= 0,
+        y > 0,
+        y < 2,
+        z > 1,
+        z < 3,
+        A %in% c('a','b'),
+        B %in% c('c','d'),
+        if ( A == 'a' ) B == 'b',
+        if ( B == 'b' ) x > 0
+    ))
+
+    x <- data.frame(
+        x = -1,
+        y = 1,
+        z = 2,
+        A = 'a',
+        B = NA
+    )
+    v <- correctSigns(E,x)
+    w <- correctSigns(E$num,x)
+    expect_equal(v$corrected,w$corrected)
+    expect_equal(v$corrections, w$corrections)
+## with revert
+    E <- editset(expression(
+        x + y == z,
+        x >= 0,
+        y > 0,
+        y < 2,
+        z > 1,
+        z < 3,
+        A %in% c('a','b'),
+        B %in% c('c','d'),
+        if ( A == 'a' ) B == 'b',
+        if ( B == 'b' ) x < 1
+    ))
+
+    x <- data.frame(
+        x = -1,
+        y = 1,
+        z = 2,
+        A = 'a',
+        B = 'b'
+    )
+
+    v <- correctSigns(E,x)
+    expect_equal(nrow(v$corrections),0)
+
+})
