@@ -1,8 +1,9 @@
 version 1.2
+- deduImpute accepts 'editset'. Imputations causing new violations are reverted afterwards
+- correctRounding, correctTypos, correctSigns now S3 generic and accept 'editset'. Corrections causing new violations are reverted afterwards.
 - deduImpute now accepts data.frames with more variables than specified in editset (-matrix, -array)
 - bugfix: counting nr. of imputations in deduImpute.editmatrix in presence of 'adapt' argument
-- correctRounding, correctTypos, correctSigns now S3 generic and accept 'editset'. Corrections causing new violations are reverted afterwards.
-- Removed deprecated argument 'Q' from 'correctRounding'
+- BREAKING CHANGE: Removed deprecated argument 'Q' from 'correctRounding'
 - BREAKING CHANGE: Argument 'R' of correctRounding is renamed 'E' for consistency reasons 
 
 
